fix overlapping scrollbar

--- a/src/sass/app/components/market.scss
+++ b/src/sass/app/components/market.scss
@@ -278,7 +278,7 @@
 
                         &.sticky {
                             position: absolute;
-                            width: 431px;
+                            width: 70%;
                             top: 60px;
                             background: $COLOR_WHITE;
                             @media (max-width: 767px) {
